; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lzma/C/extr_Threads.c_GetError.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lzma/C/extr_Threads.c_GetError.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @GetError to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @GetError() #0 {
  %1 = alloca i64, align 8
  %2 = call i64 (...) @GetLastError()
  store i64 %2, i64* %1, align 8
  %3 = load i64, i64* %1, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i64, i64* %1, align 8
  %7 = trunc i64 %6 to i32
  br label %9

8:                                                ; preds = %0
  br label %9

9:                                                ; preds = %8, %5
  %10 = phi i32 [ %7, %5 ], [ 1, %8 ]
  ret i32 %10
}

declare dso_local i64 @GetLastError(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
